--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity WebGL Player | Xureal_Eshop</title>
@@ -61,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/xureal.loader.js";
       var config = {
-        dataUrl: buildUrl + "/xureal.data.gz",
-        frameworkUrl: buildUrl + "/xureal.framework.js.gz",
-        codeUrl: buildUrl + "/xureal.wasm.gz",
+        dataUrl: buildUrl + "/xureal.data.unityweb",
+        frameworkUrl: buildUrl + "/xureal.framework.js.unityweb",
+        codeUrl: buildUrl + "/xureal.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Xureal_Eshop",
